Add recipes and linked all pages
Added 2 recipes pages and linked the home with the pages and pages to home.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna Recipe</a>
+    <a href="./recipes/french-tartiflette.html" target="_blank" rel="noopener noreferrer">French Tartiflette Recipe</a>
+    <a href="./recipes/ratatouille.html" target="_blank" rel="noopener noreferrer">Ratatouille Recipe</a>
 </body>
 
 </html>
